# moboost-maas

./: .dockerignore  .env.example  .gitignore  .memory  CHANGELOG.md  CHANGE_CHECKLIST.md  CLAUDE.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  proxy.ts  setup.sh  tailwind.config.ts  test_results.json  tsconfig.json  进化.docx
services/ad-localization/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/ad-localization/backend/alembic/: env.py
services/ad-localization/backend/alembic/versions/: 05796006b779_add_localization_modes_on_job.py  3d500478a462_add_prompt_overrides.py  a252b2b3bb1e_initial_schema.py  d714e5ac0787_add_prompt_additions_on_brand_and_.py  e36934ed28e5_add_system_settings.py  f8a1c2d3e4f5_add_user_external_id.py
services/ad-localization/backend/app/: __init__.py  config.py  db.py  deps.py  logging.py  main.py  serve.py  storage.py  windows_asyncio.py  worker.py
services/ad-localization/backend/app/ai/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py  openrouter_adapter.py  openrouter_image.py  openrouter_video.py  router.py  veo_adapter.py
services/ad-localization/backend/app/compliance/: __init__.py  effective_rules.py  evaluator.py
services/ad-localization/backend/app/exporters/: __init__.py  base.py  dsp.py  google.py  meta.py  registry.py
services/ad-localization/backend/app/models/: __init__.py  ai_log.py  audit.py  base.py  brand.py  (+12 more)
services/ad-localization/backend/scripts/: demo_e2e.py
services/ad-localization/backend/tests/: test_health.py  test_prompt_assembly.py  test_rule_engine.py  test_seed_payload.py  test_strategy_resolver.py
(+637 files in other folders)
